sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: value getNombreValeurs is not a member of Int
    for (i <- 0 getNombreValeurs() - 2 ){
                ^AlgCocktailSort1:6: error: value - is not a member of Unit
    for (i <- 0 getNombreValeurs() - 2 ){
                                   ^